--- a/Tienda_pais/OFC/inex_aus.html
+++ b/Tienda_pais/OFC/inex_aus.html
@@ -7,6 +7,7 @@
     <title>Australia</title>
     <link rel="stylesheet" href="../../Styles/Tienda_pais/Conmebol/Style_arg.css">
     <link rel="stylesheet" href="../../Styles/Carrito.css">
+    <link rel="stylesheet" href="../../Styles/carritoPopup.css">
 </head>
 <body>
     <header>
@@ -35,6 +36,12 @@
         </div>
     </header>
     <main>
+        <div id="myModal" class="modal">
+            <div class="modal-content">
+                <span class="close">&times;</span>
+                <div id="modalContent"></div>
+            </div>
+        </div>
         <section id="tienda">
             <div>
                 <div>
@@ -58,5 +65,6 @@
         
     </footer>
     <script src="../../Script/Carrito.js"></script>
+    <script src="../../Script/carritoPopup.js"></script>
 </body>
 </html>
